--- a/_posts/2022-06-14-PQ-紐澳總理重申對中政策同調-澳洲財政通膨成隱憂.html
+++ b/_posts/2022-06-14-PQ-紐澳總理重申對中政策同調-澳洲財政通膨成隱憂.html
@@ -12,7 +12,7 @@ author: 艾格姆
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/c17d3a31-fu3gvxkaqaa4x6s-683x1024.jpg" alt="" class="wp-image-104450" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/c17d3a31-fu3gvxkaqaa4x6s-683x1024.jpg 683w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/c17d3a31-fu3gvxkaqaa4x6s-200x300.jpg 200w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/c17d3a31-fu3gvxkaqaa4x6s-768x1152.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/c17d3a31-fu3gvxkaqaa4x6s.jpg 1000w" sizes="(max-width: 683px) 100vw, 683px" /><figcaption>紐西蘭總理阿爾登成為澳洲新總理艾班尼斯上任後第一位訪問澳洲的外國領袖。<br>圖中兩人披上2023年紐澳共同舉辦的女子足球世界杯主題圍巾，為兩國球隊加油。<br>圖／Anthony Albanese @AlboMP</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/c17d3a31-fu3gvxkaqaa4x6s-683x1024.jpg" alt="" class="wp-image-104450" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/c17d3a31-fu3gvxkaqaa4x6s-683x1024.jpg 683w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/c17d3a31-fu3gvxkaqaa4x6s-200x300.jpg 200w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/c17d3a31-fu3gvxkaqaa4x6s-768x1152.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/c17d3a31-fu3gvxkaqaa4x6s.jpg 1000w" sizes="(max-width: 683px) 100vw, 683px" /><figcaption>紐西蘭總理阿爾登成為澳洲新總理艾班尼斯上任後第一位訪問澳洲的外國領袖。<br>圖中兩人披上2023年紐澳共同舉辦的女子足球世界杯主題圍巾，為兩國球隊加油。<br>圖／Anthony Albanese @AlboMP</figcaption></figure></div>
 
 
 
