--- a/_posts/2022-06-15-INITIUM-如何守护独立报导-端plus会员计划一周年系列活动.html
+++ b/_posts/2022-06-15-INITIUM-如何守护独立报导-端plus会员计划一周年系列活动.html
@@ -25,12 +25,12 @@ author: 端传媒编辑部 发自新加坡
 <p><strong>我们可以一起守护的，还有“你的看见”。</strong></p>
 <p>生活在上海的端传媒读者，在参加关于上海封城的<a href="https://theinitium.com/article/20220425-event-review/">小端夜聊</a>时，分享了自己被转运到一个方舱途中的所见所闻。那天，有人在华山路上贴了“此内容因为违法无法查看”、“人们正在死去”等标语，却很快被警方带走。这位读者说，他想告诉贴标语的人：“虽然留存的时间很短，但是同时在这个城市里⋯⋯也有同样的人们看到了那个现场，他们也在用另一种方式参与进去。”</p>
 <p>在今天，成为记录者是一件需要大量勇气和坚韧心志的事；而留给独立记者的空间和资源，越来越稀薄；作为这条路上的同行者——我们不仅为独立记者提供资源和平台支持，更希望与众人协力搭建一个健康的生态，让从业者可以持续成长、相互汲养。</p>
-<p>在“如何守护独立报导？端Plus会员计划一周年系列活动”中，我们将在7月2日下午开设三场面向独立记者的工作坊：“深度报导写作：如何用人物与场景讲好故事？”、“Pitch Perfect：如何为你的选题找到支持？”、“给记者的安全隐私不完全指南”。</p>
+<p>在“如何守护独立报导？端Plus会员计划一周年系列活动”中，我们将在7月2日下午开设三场<a href="https://forms.gle/2sNdZ3YqVWXVGJgd7">面向独立记者的工作坊</a>：“深度报导写作：如何用人物与场景讲好故事？”、“Pitch Perfect：如何为你的选题找到支持？”、“给记者的安全隐私不完全指南”。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220615-notes-initium-plus-one-year/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/06/a75d39470ab24bd7abbcbf20a9f2c383.jpg?imageView2/1/w/1080/h/1620/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure>
 
-<p>除了工作坊，还有一场线上活动——“端小聚：独立记录为何重要？读者、记者和媒体的角色与困境”，邀请读者、独立记录者与媒体观察者共同讨论独立记录的意义是什么？不同角色的人们，可以在这个新闻自由备受威胁的年代，为守护独立记录做些什么？</p>
-<p>我们也将举办面向Plus会员的分享会——“尼曼归来，与《铿锵集》前记者蔡玉玲聊聊独立报导的未来”，在尼曼的一年，她有哪些收获和思考？香港的新闻报导，还有哪些可能性？未来的独立报导可以怎样做下去？</p>
+<p>除了工作坊，还有一场线上活动——<a href="https://forms.gle/f9UHCfDayiTsbnzs8">“端小聚：独立记录为何重要？读者、记者和媒体的角色与困境”</a>，邀请读者、独立记录者与媒体观察者共同讨论独立记录的意义是什么？不同角色的人们，可以在这个新闻自由备受威胁的年代，为守护独立记录做些什么？</p>
+<p>我们也将举办面向Plus会员的分享会——<a href="https://forms.gle/GounxSmk4K32mxe18">“尼曼归来，与《铿锵集》前记者蔡玉玲聊聊独立报导的未来”</a>，在尼曼的一年，她有哪些收获和思考？香港的新闻报导，还有哪些可能性？未来的独立报导可以怎样做下去？</p>
 <p>此外，我们精心制作了收录10篇重磅报导的电子书<a href="https://i.init.shop/collections/initium_ebook/products/initiumplus_collection_2022">《身旁与远方，我们共同的力量——端传媒Plus独立报导精选2021-2022》</a>，发送给每位端Plus会员，感谢你过去一年的支持与守护。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220615-notes-initium-plus-one-year/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/06/ab886543c7e34228b0284b1ebbfccb0e.jpg?imageView2/1/w/1080/h/720/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure>
