--- a/_posts/2022-06-15-PQ-英國1.2億英鎊計畫送難民去盧安達-首班遣送班機起飛前遭歐洲人權法院喊卡.html
+++ b/_posts/2022-06-15-PQ-英國1.2億英鎊計畫送難民去盧安達-首班遣送班機起飛前遭歐洲人權法院喊卡.html
@@ -24,7 +24,7 @@ author: 李熱葵
 
 
 
-<figure class="wp-block-image size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/49e698b6-聯合國、難民（圖／un）-1024x464.jpg" alt="" class="wp-image-104588" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/49e698b6-聯合國、難民（圖／un）-1024x464.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/49e698b6-聯合國、難民（圖／un）-300x136.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/49e698b6-聯合國、難民（圖／un）-768x348.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/49e698b6-聯合國、難民（圖／un）.jpg 1170w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>聯合國難民署指出，盧安達是個獨裁國家，人權紀錄極糟，不具備審查庇護要求的能力（圖／UN）</figcaption></figure>
+<figure class="wp-block-image size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/49e698b6-聯合國、難民（圖／un）-1024x464.jpg" alt="" class="wp-image-104588" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/49e698b6-聯合國、難民（圖／un）-1024x464.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/49e698b6-聯合國、難民（圖／un）-300x136.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/49e698b6-聯合國、難民（圖／un）-768x348.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/49e698b6-聯合國、難民（圖／un）.jpg 1170w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>聯合國難民署指出，盧安達是個獨裁國家，人權紀錄極糟，不具備審查庇護要求的能力（圖／UN）</figcaption></figure>
 
 
 
