--- a/_posts/2022-06-16-INMEDIA-鄭若驊丈夫潘樂陶旗下公司涉合謀定價-競委會入稟提告.html
+++ b/_posts/2022-06-16-INMEDIA-鄭若驊丈夫潘樂陶旗下公司涉合謀定價-競委會入稟提告.html
@@ -8,12 +8,12 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/newnewdontdelete_177.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>律政司司長鄭若驊丈夫潘樂陶任主席的安樂工程，涉嫌與信興集團合謀定價，涉及的工程銷售總額約20億元。競爭事務委員會指在調查後，認為已違反《競爭條例》，並入稟競爭事務審裁處提出控告。</p>
+<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/newnewdontdelete_178.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>律政司司長鄭若驊丈夫潘樂陶任主席的安樂工程，涉嫌與信興集團合謀定價，涉及的工程潛在銷售總額約20億元。競爭事務委員會指在調查後，認為已違反《競爭條例》，並入稟競爭事務審裁處提出控告。</p>
 <p>案情指在2015年12月14日至2019年12月4日期間，安樂兩名工程師與信興一名高級經理，在回應本地空調工程項目的報價及招標邀請時，透過電郵及電話訊息等渠道作頻密溝通。</p>
 <p>競委會接獲投訴後作調查，指安樂及信興要求及同意提供掩護式標書，並分享敏感商業資料，如工人項目所需的完工日數，即俗稱的「豬仔標」，相信該行為已構成合謀定價、瓜分市場及或圍標，屬嚴重反競爭行為。</p>
 <p><strong>違例行為超過四年  工程銷售總額達20億</strong></p>
 <p>競委會表示，安樂及信興從事違例行為超過四年，對其所提供的空調工程服務，包括安裝中央空調系統、更換喉管及製冷系統等組件，和系統日常保養等構成潛在影響，工程銷售總額更約20億元。競委會提到，該案件的調查隊伍在過程中共審閲近100萬份文件，為有史以來處理證據數量最多合謀案件之一。</p>
-<p>根據《競爭條例》，違反條例的業務實體可被競爭事務審裁處罰款，每項違例事項的罰款金額最高可達該業務實體在香港的年度營業額的10%，最長可達3年。競爭事務審裁處亦可發出命令，判處個別人士支付罰款或取消其擔任公司董事的資格，最長為期5年。</p>
+<p>競委會指，違反條例的業務實體可被競爭事務審裁處罰款，每項違例事項的罰款金額最高可達該業務實體在香港的年度營業額的10%，最長可達3年。競爭事務審裁處亦可發出命令，判處個別人士支付罰款或取消其擔任公司董事的資格，最長為期5年。</p>
 <p>此外，競爭事務審裁處也可頒令，要求違例方對因其行為而蒙受損失或損害的人士作出賠償，或發出其他命令以終止或補救有關違例行為。</p>
 <p>競委會行政總裁畢仲明則表示，空調供應為現代生活的必需品，有關合謀行為影響到不少住戶及在商業大廈工作的市民大眾，競委會會繼續重點打擊影響民生的合謀行為。</p>
 </div></div></div>
