Update VOCUS 2022-06-17 patch

--- a/_posts/2022-06-16-VOCUS-壞壞壞天使-奇蹟與誘惑.html
+++ b/_posts/2022-06-16-VOCUS-壞壞壞天使-奇蹟與誘惑.html
@@ -41,4 +41,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/7f855240-2968-41ce-9538-52f4a66ecfb1.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">故我認為這很有意思的是在神蹟降臨時，以神之名的從來是人而並非神魔，人自顧自地相信神蹟與遇見自己未知事物而感到恐懼或神聖，最終在多種錯誤或自負下神蹟也有可能變成了詛咒。不管神一開始是否只想神愛世人，但如果人們用這份愛去行惡，也仍可說是以父之名。</div>
 <div class="draft-block draft--p left">這讓我想到一部2016年的電影《死期大公開》，當所有人的死期透過訊息，全被發送到手機裡倒數。洩漏死亡時間之後，知道自己死期的人會如何規劃剩下來的人聲？是人生苦短即時行樂，或是不願面對天命。而好笑的是，造成人間大亂的的死期將近，在上天也不過是上帝父女間的一場對弈，如此而已。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/b8hIhcbVTco"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/b8hIhcbVTco"></iframe></div>
