--- a/_posts/2022-06-17-INMEDIA-傳無得留低下屆政府-陳帆笑稱-對唔住-冇補充.html
+++ b/_posts/2022-06-17-INMEDIA-傳無得留低下屆政府-陳帆笑稱-對唔住-冇補充.html
@@ -10,7 +10,7 @@ author: 獨媒報導
 
 <img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/20220617cf.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>新一屆政府尚有不足兩星期接任，《經濟日報》昨日傳出候任特首李家超班子的名單，當中現任運輸及房屋局長陳帆亦無法過渡，分拆後的「房屋局」及「運輸及物流局」將分別由現任建築署署長何永賢和發展局前常秘林世雄出任局長。陳帆今早出席立法會會議被追問有否收到邀請，他笑稱：「哈哈，對唔住，呢個冇咩補充。」</p>
 <p>新一屆政府將增至三司十五局，另設3名副司長。據傳出名單，現屆司局長只有6人留任，包括陳茂波、黃偉綸、楊潤雄、許正宇、鄧炳強及曾國衞。現年64歲的陳帆於1982年加入政府，任職助理電子工程師。2009年1月，他出任機電工程署副署長，2011年12月17日「坐正」署長一職。2017年獲林鄭月娥邀請，跳升出任運輸及房屋局局長。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/uZGAQc" title="DSC_1914"><img src="https://live.staticflickr.com/65535/50995921232_450a090358_z.jpg" width="640" alt="DSC_1914" /></a><br /><em>孫玉菡</em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/uZGAQc" title="DSC_1914"><img src="https://live.staticflickr.com/65535/50995921232_450a090358_z.jpg" width="640" alt="DSC_1914" /></a><br /><em>孫玉菡（資料圖片）</em></p>
 <p><strong>孫玉菡：如可服務社會都會全力以赴</strong></p>
 <p>另外，有傳現任勞工處處長孫玉菡將升任勞工及福利局局長。今早孫玉菡到立法會出席會議後，被記者問及是否收到邀請時，他稱現時專注處方工作，不評論其他事，並指如有任何崗位可以服務大眾，都會全力以赴。現任局長羅致光上周亦未有回應傳媒是否留任。</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
