--- a/_posts/2022-06-17-INMEDIA-港足梁冠聰剖白-作客印度搵命搏-感謝球迷不離不棄.html
+++ b/_posts/2022-06-17-INMEDIA-港足梁冠聰剖白-作客印度搵命搏-感謝球迷不離不棄.html
@@ -18,11 +18,9 @@ author: 獨媒報導
 <p><strong>印度衛生情況惡劣 港足肚瀉成日常事</strong></p>
 <p>球隊其後飛往印度加爾各答參與正賽，5名職球員，包括費蘭度、徐宏傑均在官方測試確診新冠。球員到埗後對食水問題感到繃緊，要用樽裝水刷牙，但每日仍出現肚瀉，空氣污染指數更「爆燈」，衛生情況惡劣。梁冠聰表示「有得揀唔會再去」，更笑言吃了人生最難吃的西蘭花。</p>
 <p>而下塌的酒店，由於當地正值節慶，梁冠聰指整間酒店「多人過銅鑼灣」、情況失控，「啲人游完水之後成身濕晒入𨋢，仲要掂你。感覺確診係遲早嘅事，睇下早定遲。」</p>
-<p>如早前確診球員已康復可參賽，亞洲足協會要求整支球隊職球員再作檢測，梁冠聰稱，「咁做唔做呢？大家都明啦。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/G72N8M" title="2022-06-13Official Training-15"><img src="https://live.staticflickr.com/65535/52145628774_b157cf0546_z.jpg" width="640" alt="2022-06-13Official Training-15" /></a><br /><em>相片由足總提供</em></p>
-<p><strong>球員逐一現病徵  梁冠聰：環境不容知道是否抱恙</strong></p>
-<p>港足在印度期間如同惡夢，球員逐漸出現新冠病徵，包括發燒、感冒、發冷、咳嗽和肌肉痛等，顏樂楓則流眼水及怕光，劉學銘更眼腫。梁冠聰形容，球員是「無退路」，環境亦不容許知道自己是否抱恙。在首場應戰阿富汗時，有球員更曾問，「如果三個守門員都唔得，我哋係咪要退賽？」</p>
-<p>港足在將士用命下取得兩連勝，奠定了出線的基礎。梁冠聰表示，自己十分敬重隊長黃洋，認為「大哥」敬業樂業，專業精神毋庸置疑，在教練染疫後更兼任對方的工作，指對方曾反問「我都39歲，仲喺度做乜嘢」，冀鼓勵年輕球員努力。</p>
+<p><strong>梁冠聰：隊長黃洋敬業樂業</strong></p>
+<p>港足在印度期間如同惡夢，球員逐漸出現新冠病徵，包括發燒、感冒、發冷、咳嗽和肌肉痛等，顏樂楓則流眼水及怕光，劉學銘更眼腫。港足在將士用命下取得兩連勝，奠定了出線的基礎。梁冠聰表示，自己十分敬重隊長黃洋，認為「大哥」敬業樂業，專業精神毋庸置疑，在教練染疫後更兼任對方的工作，指對方曾反問「我都39歲，仲喺度做乜嘢」，冀鼓勵年輕球員努力。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/t3d093" title="2022-06-14 HKRT Match Photo-25"><img src="https://live.staticflickr.com/65535/52146916970_b30a0115ed_z.jpg" width="640" alt="2022-06-14 HKRT Match Photo-25" /></a><br /><em>相片由足總提供</em></p>
 <p><strong>承認能力有所不足  續踢迫搶需多加練習  </strong></p>
 <p>對於新踢法，梁冠聰表示球員一直希望踢進攻足球，但在思想、能力上仍有不足，加上本地賽事速率和節奏亦不高，「香港聯賽有邊一隊踢迫搶？」他同意未來應繼續嘗試踢高位迫搶，不應再只穩守突擊，但需要多加練習和提升比賽強度。</p>
