Update VOCUS 2022-06-18 patch

--- a/_posts/2022-06-17-VOCUS-夜讀驚魂-女巫與鬼故事.html
+++ b/_posts/2022-06-17-VOCUS-夜讀驚魂-女巫與鬼故事.html
@@ -39,4 +39,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/6c83a68f-1dd7-4134-8b98-55df18c6d0bb.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">近幾年這類型的鬼故事搬上螢幕，幾乎都是短篇恐怖故事合集，如2019年的《鬼故事收藏館》就很直接的由五個恐怖小故事構成，並呈現出雖是單元劇，但還能貫穿整個故事的一切回到原點的輪迴。同年《在黑暗中說的鬼故事》則較為精巧的就以恐怖書中內容成真為主體。我認為《夜讀驚魂》明顯在兩者詮釋的中間線，但整體來說還有很多需要加強的地方。</div>
 <div class="draft-block draft--p left">以一個亞洲喜愛恐怖故事的觀眾來說，真的最高標準還是《毛骨悚然撞鬼經驗》充滿日常感和衝擊性的恐怖懸疑。近幾年歐美也有類似的方式去呈現，但多半都落得俗套與假掰的下場。作為兒童恐怖的《夜讀驚魂》雖說有原作支撐而讓故事不落俗套，但就其他方面來說，依舊跟能留下恐怖一詞相距甚遠。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/aQO16k5Vdow"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/aQO16k5Vdow"></iframe></div>
