--- a/_posts/2022-06-17-INMEDIA-港足梁冠聰剖白-作客印度搵命搏-感謝球迷不離不棄.html
+++ b/_posts/2022-06-17-INMEDIA-港足梁冠聰剖白-作客印度搵命搏-感謝球迷不離不棄.html
@@ -19,7 +19,7 @@ author: 獨媒報導
 <p>球隊其後飛往印度加爾各答參與正賽，5名職球員，包括費蘭度、徐宏傑均在官方測試確診新冠。球員到埗後對食水問題感到繃緊，要用樽裝水刷牙，但每日仍出現肚瀉，空氣污染指數更「爆燈」，衛生情況惡劣。梁冠聰表示「有得揀唔會再去」，更笑言吃了人生最難吃的西蘭花。</p>
 <p>而下塌的酒店，由於當地正值節慶，梁冠聰指整間酒店「多人過銅鑼灣」、情況失控，「啲人游完水之後成身濕晒入𨋢，仲要掂你。感覺確診係遲早嘅事，睇下早定遲。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/G72N8M" title="2022-06-13Official Training-15"><img src="https://live.staticflickr.com/65535/52145628774_b157cf0546_z.jpg" width="640" alt="2022-06-13Official Training-15" /></a><br /><em>相片由足總提供</em></p>
-<p><strong>梁冠聰：隊長黃洋敬業樂業</strong></p>
+<p><strong>梁冠聰：「大哥」黃洋敬業樂業</strong></p>
 <p>港足在印度期間如同惡夢，球員逐漸出現新冠病徵，包括發燒、感冒、發冷、咳嗽和肌肉痛等，顏樂楓則流眼水及怕光，劉學銘更眼腫。港足在將士用命下取得兩連勝，奠定了出線的基礎。梁冠聰表示，自己十分敬重隊長黃洋，認為「大哥」敬業樂業，專業精神毋庸置疑，在教練染疫後更兼任對方的工作，指對方曾反問「我都39歲，仲喺度做乜嘢」，冀鼓勵年輕球員努力。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/t3d093" title="2022-06-14 HKRT Match Photo-25"><img src="https://live.staticflickr.com/65535/52146916970_b30a0115ed_z.jpg" width="640" alt="2022-06-14 HKRT Match Photo-25" /></a><br /><em>相片由足總提供</em></p>
 <p><strong>承認能力有所不足  續踢迫搶需多加練習  </strong></p>
@@ -28,6 +28,6 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/7912TC" title="2022-06-14 HKRT Arrival-1"><img src="https://live.staticflickr.com/65535/52146425086_85896fa4fe_z.jpg" width="640" alt="2022-06-14 HKRT Arrival-1" /></a><br /><em>相片由足總提供</em></p>
 <p><strong>梁冠聰同確診  Ct值升至40才能參與亞協盃</strong></p>
 <p>梁冠聰早前亦曾確診新冠，目前已轉為陰性。他目前在曼谷休息，但仍須待Ct 值升至40，才能到武里南參與亞協盃賽事，如在20日測試的Ct 值未能恢復，則無法參賽；但梁冠聰認為今趟行程不枉此生。</p>
-<p>港足七月將遠赴日本，參與東亞足球錦標賽，迎戰中日韓，梁冠聰表示，「我寧願俾人哋大炒，知道有啲乜嘢需要、需要改善，頻率唔夠快、對抗唔夠好。」他指安達臣的信念堅定，在旅程中不斷給予球員信心，更對球員笑稱，「就算你係兩條線！都唔係兩條線！你無事，你踢到！」</p>
+<p>港足七月將遠赴日本，參與東亞足球錦標賽，迎戰中日韓，梁冠聰表示，「我寧願俾人哋大炒，知道有啲乜嘢需要、需要改善，頻率唔夠快、對抗唔夠好。」他指安達臣的信念堅定，在旅程中不斷給予球員信心。</p>
 <p>此外，安達臣在港足在泰國的最後會議中表示，希望9月能在香港進行主場作賽，與主場球迷見面，但無奈目前仍受防疫措施限制。</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
