--- a/_posts/2022-06-17-PQ-要求保障最低工資韓國貨車司機罷工落幕-損失至少台幣368億.html
+++ b/_posts/2022-06-17-PQ-要求保障最低工資韓國貨車司機罷工落幕-損失至少台幣368億.html
@@ -13,7 +13,7 @@ author: 林貝利
 
 
 <figure class="wp-block-embed aligncenter is-type-video is-provider-youtube wp-block-embed-youtube wp-embed-aspect-16-9 wp-has-aspect-ratio"><div class="wp-block-embed__wrapper">
-<iframe title="화물연대-국토부 협상 타결…“안전운임제 지속 추진” / KBS  2022.06.15." src="https://www.youtube.com/embed/wrcJ--C4g5I?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe loading="lazy" title="화물연대-국토부 협상 타결…“안전운임제 지속 추진” / KBS  2022.06.15." src="https://www.youtube.com/embed/wrcJ--C4g5I?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div><figcaption>韓國公共電視KBS報導片段</figcaption></figure>
 
 
