--- a/_posts/2022-06-19-PQ-蔑稱對美公關費是孝親費-外交部怒斥聯合報配合中國認知作戰.html
+++ b/_posts/2022-06-19-PQ-蔑稱對美公關費是孝親費-外交部怒斥聯合報配合中國認知作戰.html
@@ -16,7 +16,7 @@ author: 呂酒林
 
 
 
-<figure class="wp-block-image size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/beabd435-下載-6-1010x1024.jpg" alt="" class="wp-image-104996" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/beabd435-下載-6-1010x1024.jpg 1010w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/beabd435-下載-6-296x300.jpg 296w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/beabd435-下載-6-768x778.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/beabd435-下載-6.jpg 1333w" sizes="(max-width: 1010px) 100vw, 1010px" /><figcaption>聯合報以「陸外交部稱 政治公關費只是台灣『孝敬》美國冰山一角」為題報導，配合中國政治語言，將公關費蔑稱為為孝親費。（圖／截自聯合新聞網）</figcaption></figure>
+<figure class="wp-block-image size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/beabd435-下載-6-1010x1024.jpg" alt="" class="wp-image-104996" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/beabd435-下載-6-1010x1024.jpg 1010w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/beabd435-下載-6-296x300.jpg 296w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/beabd435-下載-6-768x778.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/beabd435-下載-6.jpg 1333w" sizes="(max-width: 1010px) 100vw, 1010px" /><figcaption>聯合報以「陸外交部稱 政治公關費只是台灣『孝敬》美國冰山一角」為題報導，配合中國政治語言，將公關費蔑稱為為孝親費。（圖／截自聯合新聞網）</figcaption></figure>
 
 
 
