--- a/_posts/2022-06-20-INMEDIA-失蹤少女-燕琳-短片取消放映-鮮浪潮導演自發讀劇本-以另一種方式帶入戲院.html
+++ b/_posts/2022-06-20-INMEDIA-失蹤少女-燕琳-短片取消放映-鮮浪潮導演自發讀劇本-以另一種方式帶入戲院.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/18_7.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>以失蹤少女「燕琳」為背景的短片《Time, and Time Again》，因未能在放映前獲發「核准證明書」，成為今屆鮮浪潮電影節暫時唯一未能在戲院上映的本地短片。在昨晚放映的兩場節目，有三名本地導演於映後談讀出電影劇本選段。劇本提及探員調查失蹤少女燕琳的案件，惟被上司阻止，探員質疑：「咁都叫無可疑？查都未查完你就知冇料到？你咁講我都會繼續查落去。」而劇本尾聲，探員向燕琳說：「記住，呢個世界好荒謬，如果你改變唔到啲咩，相信你自己做嘅嘢，無論你去到邊度都好，你都會自由。」</p>
+<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/18_7.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>以失蹤少女「燕琳」為背景的短片《Time, and Time Again》，因未能在放映前獲發「核准證明書」，成為今屆鮮浪潮電影節暫時唯一未能在戲院上映的本地短片。在昨晚放映的兩場節目，有三名本地導演於映後談讀出電影劇本選段。劇本提及探員調查失蹤少女燕琳的案件被上司阻止，探員質疑：「咁都叫無可疑？你咁講我都會繼續查落去。」而劇本尾聲，探員向燕琳說：「記住，呢個世界好荒謬，如果你改變唔到啲咩，相信你自己做嘅嘢，無論你去到邊度都好，你都會自由。」</p>
 <p>其中一名導演向《獨媒》表示，在香港拍攝短片本已很困難，對同行作品未能放映感可惜，望幫忙將無法上映的短片「帶入戲院畀觀眾」。至於《Time》的監製和攝影則於映後談讀出導演聲明，指「『燕琳』呢個名引申出嚟嘅關注，純粹眾人自己嘅猜測。其實正正就係自我審查緊。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/utmDVp" title="photo_2022-06-20_16-47-15"><img src="https://live.staticflickr.com/65535/52159773583_1451d8aeef.jpg" width="500" alt="photo_2022-06-20_16-47-15" /></a><br /><em>「生者如斯」映後談</em></p>
 <p><strong>三導演映後談讀劇本選段 探員欲查失蹤少女被上司阻止</strong></p>
