--- a/_posts/2022-06-18-INITIUM-父亲节-爸爸羞辱-猪队友抑或当代暖爸-网路时代父亲形象的构筑.html
+++ b/_posts/2022-06-18-INITIUM-父亲节-爸爸羞辱-猪队友抑或当代暖爸-网路时代父亲形象的构筑.html
@@ -9,12 +9,16 @@ author: 特约撰稿人 邓正健
 ---
 
 <p>「虽然华人之父亲多是家族象征，台湾八八父亲节亦曾是爱国主义产物，但网络时代的晒娃／sharenting还是带来缓慢变革⋯⋯」</p><p>特约撰稿人 邓正健</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220619-culture-fathers-day-in-social-media-age/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/06/121c4f9288004b15b485db98de152219.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2016年6月19日，中国杭州，父亲们打扮成超人背著孩子参加俯卧撑庆祝父亲节。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2016年6月19日，中国杭州，父亲们打扮成超人背著孩子参加俯卧撑庆祝父亲节。<span class="credit">摄：Visual China Group via Getty Images</span></figcaption></figure><p>又到父亲节，社交媒体上一片分享跟父亲庆祝节日的帖文，礼物与美食，然而在此当下，亦是一个让我们反思网路时代教养现象的机会。按每年六月第三个星期日，是很多国家的父亲节。这个节日的由来是源自一个平衡原则：对父亲需要有著跟对母亲同等的重视。而父亲节跟母亲节两个节日，皆起源于二十世纪初的美国。先说母亲节的起源，一位名为贾维斯（Anna Jarvis）的女士，一直与母亲生活，且终身未婚。1905年，贾维斯的母亲逝世， 她一方面为了纪念母亲，另一方面眼见很多在一次大战中阵亡军人的孤母遗孀孤苦无依，便发起以其母逝世之日为母亲节，并极力呼吁官方和民间向应。母亲节的庆祝活动于1908年5月10日正式开始，到了1913年，美国国会更通过议案，将每年五月第二个星期日定为法定母亲节。</p>
+            <figcaption itemprop="caption">2016年6月19日，中国杭州，父亲们打扮成超人背著孩子参加俯卧撑庆祝父亲节。<span class="credit">摄：Visual China Group via Getty Images</span></figcaption></figure><p><small> 邓正健，香港文化评论人，剧场研究者。香港中文大学文化研究博士，曾于多间大学任客席讲师，从事文化及艺术评论逾二十年。著有个人评论文集《道旁儿》。现居英国。</small></p>
+<p>又到父亲节，社交媒体上一片分享跟父亲庆祝节日的帖文，礼物与美食，然而在此当下，亦是一个让我们反思网路时代教养现象的机会。按每年六月第三个星期日，是很多国家的父亲节。这个节日的由来是源自一个平衡原则：对父亲需要有著跟对母亲同等的重视。而父亲节跟母亲节两个节日，皆起源于二十世纪初的美国。先说母亲节的起源，一位名为贾维斯（Anna Jarvis）的女士，一直与母亲生活，且终身未婚。1905年，贾维斯的母亲逝世， 她一方面为了纪念母亲，另一方面眼见很多在一次大战中阵亡军人的孤母遗孀孤苦无依，便发起以其母逝世之日为母亲节，并极力呼吁官方和民间向应。母亲节的庆祝活动于1908年5月10日正式开始，到了1913年，美国国会更通过议案，将每年五月第二个星期日定为法定母亲节。</p>
 <p>至于父亲节，则是由一位名叫杜德夫人（Sonora Smart Dodd）的女士，在参加完母亲节庆祝活动后发起的。杜德夫人的父亲是一名鳏夫，在妻子难产过世后，他独力抚养六名子女，并一直没有续弦。1909年，这名父亲去世了，杜德夫人有感父亲对家庭的付出，便效法贾维斯的做法，推动设立父亲节，并在1910年举办第一次父亲节活动。却直到1972年，时任美国总统的尼克逊（Nixon，尼克森）才签署法案，将六月第三个星期日（也是杜德夫人之父逝世之日）定为法定节日。比母亲节迟逾半个世纪。</p>
 <blockquote>
 <p>礼物商品进一步强化性别在家庭角色中的刻板印象，如常见的父亲节礼物则西装、公事包（出外工作），运动用品（好动），电子产品（兼具工作和娱乐功能）等。</p>
 </blockquote>
 <p>母亲节之所以流行，有其历史因素：因为一次大战，产生大量父亲缺席的家庭，从而令母亲对子女的付出变得更能感染当时的美国社会。不过当中亦另有文化和心理因素：在传统家庭结构中，母亲一直承担著抚养儿女的责任，即使不在战争时期，儿女跟母亲的关系一般远比跟父亲亲密。心理学上亦有孩子跟母亲的“感情纽带”（bonding） 的分析，强调在孩子在早期成长阶段中，由对母亲的依赖而产生安全感，而在这种关系纽带中，父亲往往是不在场的。换言之，歌颂母爱既是人类文化中的常态，也是人类成长条件使然的普遍产物。反而像杜德夫人那样，因母亲早逝而令父亲必须“父兼母职”，让父亲展露对家庭关系的付出，才不是在传统家庭结构下的常态。父亲之爱，自然也不是文化中最流行的产物。</p>
+<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220619-culture-fathers-day-in-social-media-age/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/06/be741058d2ff4190ba2964b3b832c225.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2021年5月29日，贵州遵义，爸爸手抱婴儿在广场上散步。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<figcaption itemprop="caption">2021年5月29日，贵州遵义，爸爸手抱婴儿在广场上散步。<span class="credit">摄：林振东/端传媒 </span></figcaption></figure>
+
 <h2>“爸爸羞辱”：刻板印象与节日命名</h2>
 <p>今天很多国家都跟随美国，分别在五、六月庆祝母亲节和父亲节，其中亦包括香港。不过像很多节日一样，今天的母亲节和父亲节早已渗杂了许多消费主义的色彩，这不难反映在赠送礼物的环节上：商品广告一直宣称，要表达对父母的爱意，就得送礼物，于是你必须消费，并在各种商品中发现子女敬爱父母的美好（但廉价）的故事。而商品亦进一步强化性别在家庭角色中的刻板印象，这恰恰也是两个节日由来的历史社会条件。</p>
  
@@ -23,6 +27,7 @@ author: 特约撰稿人 邓正健
  
  
  
+
  
  
  
@@ -40,6 +45,7 @@ author: 特约撰稿人 邓正健
  
  
  
+
  
  
  
@@ -50,13 +56,18 @@ author: 特约撰稿人 邓正健
  
  
  
+ 
+ 
+ 
+
  
  
  
  
 <p>常见的母亲节礼物有厨房用品（负责家中膳食）、按摩椅（辛劳做家务）及护肤品（女性必须外表美丽）等；而父亲节礼物则有西装、公事包（出外工作），运动用品（好动），电子产品（兼具工作和娱乐功能）等。于是，在近年尤其在西方世界的一些关于母亲节和父亲节的讨论中，经常得接受女性主义的检验。像上述性别定型的批评只属表层，更深入的讨论往往涉及对父权家庭结构、教养（parenting） 以至对节日命名的挑战。</p><p>
 </p><p>亦有所谓“爸爸羞辱”（dad shaming），一般是指公众嘲笑父亲在育儿和家务工作的笨拙。当一名父亲无法履行这一责任时，就会受到舆论压力而形成羞愧心态。</p>
-<p></p><p>例如，过去一直有所谓“妈妈羞辱”（mom shaming）的现象，意指公众对母亲育儿方式的指责，致令母亲对自己无法做好母亲责任而感到羞愧。其中最常见的指责之一，就是母亲以配方奶粉代替母乳喂哺婴儿，社会上大量的育儿资讯都提倡母乳的好处，因而形成一种舆论压力，就是母亲改用配方奶粉是因为“懒”、“不关心孩子健康”，继而产生羞辱效果。</p><p>同样地，亦有所谓“爸爸羞辱”（dad shaming），一般是指公众嘲笑父亲在育儿和家务工作的笨拙。这现象衍生自近年对社会对教养理念的更新，简单地说，就是父亲需要一定程度地承担照顾子女的责任。同样地，当一名父亲无法履行这一责任时，就会受到舆论压力而形成羞愧心态。女性主义者对母亲节和父亲节较温和的批评，通常集中在家庭角色的性别定型上；但部份激进观点则会上升至上述的“羞辱”层次。</p><p>另一方面，对于节日的命名，亦有人提出过一些很“政治正确”的想象。例如在1994年，时任美国总统克林顿（Clinton，柯林顿）签署议案，将七月第四个星期日定为“父母节”（parent’s day）。而联合国亦在2012年把6月1日定为“全球父母节（global parent’s day）”。这个设定相当温和，却淡化了父母亲跟子女关系上的差异。另外，亦有人提议将父亲节改名为“Special Person’s Day”，此建议原意是让一些没有父亲的孩子不致被排除于节目之外，而其中更隐含著对“多元成家”的重视。</p><p>华人教养：家长式，亲恩文化，巨婴教养</p><p>
+<p></p><p>例如，过去一直有所谓“妈妈羞辱”（mom shaming）的现象，意指公众对母亲育儿方式的指责，致令母亲对自己无法做好母亲责任而感到羞愧。其中最常见的指责之一，就是母亲以配方奶粉代替母乳喂哺婴儿，社会上大量的育儿资讯都提倡母乳的好处，因而形成一种舆论压力，就是母亲改用配方奶粉是因为“懒”、“不关心孩子健康”，继而产生羞辱效果。</p><p>同样地，亦有所谓“爸爸羞辱”（dad shaming），一般是指公众嘲笑父亲在育儿和家务工作的笨拙。这现象衍生自近年对社会对教养理念的更新，简单地说，就是父亲需要一定程度地承担照顾子女的责任。同样地，当一名父亲无法履行这一责任时，就会受到舆论压力而形成羞愧心态。女性主义者对母亲节和父亲节较温和的批评，通常集中在家庭角色的性别定型上；但部份激进观点则会上升至上述的“羞辱”层次。</p><p>另一方面，对于节日的命名，亦有人提出过一些很“政治正确”的想象。例如在1994年，时任美国总统克林顿（Clinton，柯林顿）签署议案，将七月第四个星期日定为“父母节”（parent’s day）。而联合国亦在2012年把6月1日定为“全球父母节（global parent’s day）”。这个设定相当温和，却淡化了父母亲跟子女关系上的差异。另外，亦有人提议将父亲节改名为“Special Person’s Day”，此建议原意是让一些没有父亲的孩子不致被排除于节目之外，而其中更隐含著对“多元成家”的重视。</p><p><a class="image" href="https://theinitium.com/article/20220619-culture-fathers-day-in-social-media-age/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/06/33d3122c656f4897b77453d92d5ed567.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年4月5日，台北市儿童新乐园，一对父女在玩机动游戏。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+</p><figcaption itemprop="caption">2022年4月5日，台北市儿童新乐园，一对父女在玩机动游戏。<span class="credit">摄：陈焯𪸩/端传媒</span></figcaption><p></p><p>华人教养：家长式，亲恩文化，巨婴教养</p><p>
 </p><p>这是对华人的父母印象与教养观念起源的一个很好的描述：“母亲”投射出来的，是带有情感勒索成份的爱，而“父亲”则是作为家族、或甚是国家（华人语境中即时有“家国”并称的说法）的象征，子女对父亲多只有“敬”而缺乏“爱”。</p>
 <p></p><p>在台湾，父亲节一般在八月八日庆祝。这个日子起源于1945年上海，民间在抗战胜利后发起“八八父亲节”，取“八八”为“爸爸”谐音，而“八八”的字型也像一个“父”字。而成立节日的理据是：纪念八年抗战中阵亡将士的父与兄。这一官方说法是明文脱胎自贾维斯在美国倡议母亲节的说法，却将纪念对象由将士的“母亲与妻子”改为“父亲与兄长”。显然，</p><p>华人社会一般以“家长”称呼父母，在意思上，并非跟英语中的“parent”完全对应。Parent一词在拉丁语系中有“带来”、“让其出生” 之意， 仅说明了父母与子女之间的血缘关系。但“家长”则是指“一家之长”，传统上是专指父系社会中的宗族支配者。英语中有paternalism一词，可译作“家长式作风”，其词根pater便有“父亲”或“父亲的行为”之意。</p><p>从八八父亲节的起源，可以反映出华人社会传统对父亲的想像，远比西方更具父权色彩：父亲是家庭支配者，父亲对子女所施予的主要是管教、灌输道德观念（例如八八父亲节的爱国主义）、以及管束其行为，而不是养育之爱和安全感。子女对父亲的情感也主要是敬重与恩情，而不是成长中的“感情纽带”。</p><p>有一首在华人社会相当流的歌曲，叫《世上只有妈妈好》，歌词很短，摘录如下：</p><p><small>世上只有妈妈好，有妈的孩子像个宝，<br>
 投进妈妈的怀抱，幸福享不了。</small></p><p><small>世上只有妈妈好，没妈的孩子像根草，<br>
@@ -65,12 +76,14 @@ author: 特约撰稿人 邓正健
 </p><p>“恩亲”的说法淡化了父母跟子女之间无条件的感情纽带，却强化了两者“施恩”与“回报”的道德互动，它巧妙地避开了作为传统封建思想象征的“孝”这一说法，但同样有著隐晦的情感勒索成份。</p>
 <p></p><p>歌曲简洁明朗地写出了母亲与子女之间最质朴的感情纽带，母亲之爱是无条件的，是子女情感的安全网。 相对而言，并没有一首歌颂父亲的华语歌曲能像《世上只有妈妈好》那般脍炙人口。一般歌颂父亲的歌曲，更多强调父亲对子女的恩德、教诲，有时是怀念逝去父亲对子女在养育上的付出等等。</p><p>推而广之，华人社会也会把“感恩”表现在对母亲的情感当中，于是产生了“恩亲”或“亲恩”的说法。“亲”说明了跟父母在血缘和宗族上的关系，“恩”则是情感性质，这个观念淡化了父母跟子女之间无条件的感情纽带，却强化了两者“施恩”与“回报”的道德互动，它巧妙地避开了作为传统封建思想象征的“孝”这一说法，但同样有著隐晦的情感勒索成份。</p><p>内地禁书《巨婴国》（武志红著，2016年）曾经描述过一种亲子关系，可说是这种情感勒索的极端版本：在内地，传统家庭角色的观念仍然很强，父主外母主内的结构相当牢固，由于母亲几乎是独力承担教养儿子的责任，于是母子的感情纽带亦变得十分坚靭。书中描述的“巨婴”，其中一个意思就是指，很多内地男性自小受到母亲的全方位庇护，造成对母亲的强烈依恋，到长大成人后，男性往往仍然需要在母亲的护荫下才有安全感，就好像一个心智上长不大的巨婴一样。</p><p>书中亦提及，即使到了男性娶妻成家，仍然无法如精神分析所描述一般，将对母亲的情感投射移情到妻子身上。反而，母亲却总是想像媳妇会抢走儿子，令中国传统家庭中的婆媳矛盾情结持续放大。儿子成为母亲和媳妇之间的磨心，无法处理亦不懂面对，只好全面退出家中事务，寄情于外面的工作。于是，当媳妇诞下婴儿后，上一代的感情纽带又开始重演：在丈夫缺席家中事务、而家婆（广东人对丈夫母亲的叫法，亦即北方之“婆婆”）又不断逼迫自己的劣势下，媳妇只能将所有感情投放在襁袍中的儿子身上，结果将“巨婴”的因子延续下去。</p><p>当然《巨婴国》所描述的未必完全反映一般华人社会、或甚只是内地社会的状况，然而这却是对华人的父母印象与教养观念起源的一个很好的描述：“母亲”投射出来的，是带有情感勒索成份（哪怕是程度很轻）的爱，而“父亲”则是作为家族、或甚是国家（华人语境中即时有“家国”并称的说法）的象征，子女对父亲多只有“敬”而缺乏“爱”。</p><p>
 </p><p>八八父亲节是典型爱国主义的产物，赞颂父亲如何在日常家教中鼓动儿子爱国情怀，激励抗战士气，而不是感激父亲在养育中所付出的爱。从此起源，可以反映出华人社会传统对父亲的想像，远比西方更具父权色彩。</p>
-<p></p><p>网路世界：“Sharenting”与暖爸形象建构</p><p>不过，对于在网路世界中成长、现在已纷纷成为父母的年轻一代来说，教养的观念正在改变。双职父母早成常态，对育儿的理念和责任亦变得愈加复杂。例如在香港，依赖“外佣”（外籍家政工）或祖辈帮忙照顾孩子，基本上是一般年轻家庭所必须的；而由于网路资讯发达，年轻父母现在已普遍接受以下三种育儿观念：</p><p>一、育儿不能完全假手于人（家政帮工或祖辈），而需要一定程度上亲力亲为；<br>
+<p></p><p><a class="image" href="https://theinitium.com/article/20220619-culture-fathers-day-in-social-media-age/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/06/85b059a3a34143fcaa7a5d382aa63f67.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2016年6月19日，中国杭州，孩子们用奶瓶喂父亲喝牛奶，庆祝父亲节。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+</p><figcaption itemprop="caption">2016年6月19日，中国杭州，孩子们用奶瓶喂父亲喝牛奶，庆祝父亲节。<span class="credit">摄：Visual China Group via Getty Images</span></figcaption><p></p><p>网路世界：“Sharenting”与暖爸形象建构</p><p>不过，对于在网路世界中成长、现在已纷纷成为父母的年轻一代来说，教养的观念正在改变。双职父母早成常态，对育儿的理念和责任亦变得愈加复杂。例如在香港，依赖“外佣”（外籍家政工）或祖辈帮忙照顾孩子，基本上是一般年轻家庭所必须的；而由于网路资讯发达，年轻父母现在已普遍接受以下三种育儿观念：</p><p>一、育儿不能完全假手于人（家政帮工或祖辈），而需要一定程度上亲力亲为；<br>
 二、祖辈的育儿知识并不完全可靠，甚至有不少所谓传统经验是不科学、或对教养有坏影响的。因此，亲自学习育儿知识是必须的。而互联网就是主要途径之一；<br>
 三、传统“男外女内”的家庭角色定型已不合时宜，年轻父母已经普遍接受教养是父母共同承担的责任。</p><p>话虽如此，现今教养问题不只涉及到“如何养育儿女”，更关系到为人父母如何平衡教养责任、教养知识和信念的取舍、以及来自家族（主要是祖辈）及坊间的压力（例如妈妈／爸爸羞辱）的问题。</p><p>现今网路一代的父母普遍浸淫在“Sharenting”的风潮里。Sharenting由share和parenting 两字合并而成，泛指父母将自己育子教养的过程在网上分享的行为。华文语境中尚无一个统一贴切的译法，按字面意思有译作“分享教养”或“父母分享”，内地和台湾则有“晒娃”这一流行语，亦有人强调这行为的负面影响而译作“分享教养成癖”。</p><p>
 </p><p>对sharenting的行为作出批评，并非旨在希望年轻父母不再“晒娃”，而是把“晒娃”行为变成parenting的一部份。parenting不再仅指“如何教育子女”，更包括“如何成为父母”。而台港社交平台上的sharenting现象仍有著性别定型的痕迹。</p>
 <p></p><p>对于这个现象，一般批评主要集中在儿童私隐问题上，即sharenting令儿童在不知情和非自愿的情况下，留下大量数码足迹（digital footprint）。例如美国法律学者普伦凯特（Leah Plunkett）在其著作《分享教养：为何我们应在网上谈论孩子前三思？》（Sharenthood: Why We Should Think before We Talk about Our Kids Online , 2019）中指出，父母在分享子女照片和资讯时，往往缺乏对这行为之长期影响的考量，一方面他们剥夺了子女“不参与”或“初次参与”社交媒体的权利，另一方面亦无视子女自小便暴露于网路公众眼光下，到底有何风险。</p><p>不过，撇除一些极端的个别例子，现今父母对网路风险的认知，亦跟他们对教养知识的了解一样，一直在增进。对sharenting的行为作出批评，并非旨在希望年轻父母不再“晒娃”，而是把“晒娃”行为变成parenting的一部份——在这里，parenting不再仅指“如何教育子女”，更包括“如何成为父母”（香港即有“生仔要考牌”的说法），当中牵涉到怎样理解sharenting 对parenting 的影响，以及在sharenting 过程中所必须承担的责任等。</p><p>正如一般社交平台的分享行为一样，sharenting的作用主要是“自我形象建构”和“寻找认同”，对于分享子女照片和资讯的网路风险，不少父母已有所警剔，一方面他们会谨慎选择社交平台的私隐设定，另一方面亦如普伦凯特书名所言，要在分享之前“三思”。而台港社交平台上的sharenting现象仍有著性别定型的痕迹，例如一般母亲的分享比父亲的更多和更有系统，就笔者观察所得，父亲分享的多是跟子女的相处、游玩和学习的生活点滴，随机性较强；而母亲则更多分享育儿的细节，有些母亲更巨细无遗地从怀孕、生产、喂哺到子女成长不同阶段的细节，都积极分享。</p><p>
 </p><p>传统上，这类在教养上遇到困难时所获得的情感支持或知识授予，多数来自家族成员或最密切的亲友，如今sharenting则成了另一个出门，让他们可在网路的家长群体中获得充份的支持。</p>
-<p></p><p>必须注意的是，这些sharenting的行为虽有网路私隐的风险，但同时亦是父母在他人面前构建其“理想父母形象”的过程，而这个“理想父母形象”的想像则与他们对parenting的理解和信念有关。例如，当分享婴儿可爱动人的照片，就是在塑造自己慈爱的形象；又如母亲分享丈夫帮忙育儿的过程，可能是褒扬丈夫有力帮忙，亦可能是嘲笑丈夫不懂育儿技巧，随手再加上“#神队友”或“#猪队友”之类的hashtag，其实也是在社区平台表现他们对夫妻之间在教养责任上的理解和分工；又或者当母亲分享子女闹脾气等令人抓狂泄气的行为时，正是要在网路上获得其他父母的认同。传统上，这类在教养上遇到困难时所获得的情感支持或知识授予，多数来自家族成员或最密切的亲友，如今sharenting则成了另一个出门，让他们可在网路的家长群体中获得充份的支持。</p><p>在sharenting的现象下，年轻一代的父亲形象也产生了一些变化。例如父亲们更愿意公开他们参与传统上主要是由母亲完成的贴身教养工作，像婴孩时期要喂奶换片（换尿布），子女成长过程中需要照顾的起居饮食等；有部份父亲更会坦率地表现对子女的慈爱，如跟子女一起的亲密照，或在文字上流露对子女的情感等。这些形象，亦逐渐形成一种parenting的范式，在今天的华人社会里，愈来愈多年轻一代摒弃传统的家庭角色分工，并将“暖爸”视为模范父亲的形象。</p><p>三代同堂？年轻父亲想要做什么</p><p>
+<p></p><p>必须注意的是，这些sharenting的行为虽有网路私隐的风险，但同时亦是父母在他人面前构建其“理想父母形象”的过程，而这个“理想父母形象”的想像则与他们对parenting的理解和信念有关。例如，当分享婴儿可爱动人的照片，就是在塑造自己慈爱的形象；又如母亲分享丈夫帮忙育儿的过程，可能是褒扬丈夫有力帮忙，亦可能是嘲笑丈夫不懂育儿技巧，随手再加上“#神队友”或“#猪队友”之类的hashtag，其实也是在社区平台表现他们对夫妻之间在教养责任上的理解和分工；又或者当母亲分享子女闹脾气等令人抓狂泄气的行为时，正是要在网路上获得其他父母的认同。传统上，这类在教养上遇到困难时所获得的情感支持或知识授予，多数来自家族成员或最密切的亲友，如今sharenting则成了另一个出门，让他们可在网路的家长群体中获得充份的支持。</p><p>在sharenting的现象下，年轻一代的父亲形象也产生了一些变化。例如父亲们更愿意公开他们参与传统上主要是由母亲完成的贴身教养工作，像婴孩时期要喂奶换片（换尿布），子女成长过程中需要照顾的起居饮食等；有部份父亲更会坦率地表现对子女的慈爱，如跟子女一起的亲密照，或在文字上流露对子女的情感等。这些形象，亦逐渐形成一种parenting的范式，在今天的华人社会里，愈来愈多年轻一代摒弃传统的家庭角色分工，并将“暖爸”视为模范父亲的形象。</p><p><a class="image" href="https://theinitium.com/article/20220619-culture-fathers-day-in-social-media-age/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/06/acd768e6515e404a9f6c46b9e6b3f40b.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年3月10日，香港的疫情下，父亲陪伴小孩子在东岸公园玩耍。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+</p><figcaption itemprop="caption">2022年3月10日，香港的疫情下，父亲陪伴小孩子在东岸公园玩耍。<span class="credit">摄：林振东/端传媒 </span></figcaption><p></p><p>三代同堂？年轻父亲想要做什么</p><p>
 </p><p>藉著“暖爸”的模范父亲形象，年轻父亲既否定了旧式教养智慧，亦以更亲和的面貌松动老父的传统父亲形象，以建构三代同堂的感情纽带，而不是传统家庭观念中壁垒分明的辈份观念。尽管以sharenting为自己塑造“暖爸”形象，并不代表自己真的是“暖爸”。</p>
 <p></p><p>至于适逢父亲节，年轻父亲亦透过分享与其老父（即三代同堂中的“祖父”）的庆祝活动，重建一道连系“父—子—孙”三代的感情纽带。如果说，传统父子关系因缺乏parenting的感情纽带而淡如清水，当儿子由反叛的青春期进入成年，继而成为父亲之后，他们反而会在教养子女的过程中，刻意领略自己跟老父的关系。在一些sharenting 的内容里，“三代同堂”的画面也是经常出现的，分享者所要塑造的，不只是三代同堂的幸福画面，更是要表达当儿子成为人父之后，父亲老去，自己却成了家族纽带中的“家长”。这看似跟上述“暖爸”形象相矛盾，但实际上这一转化，通常并非精神分析学派所说的“弑父情结”，而是要更柔性地调解前述的“巨婴式”轮回。</p><p>藉著“暖爸”的模范父亲形象，年轻父亲既否定了旧式教养智慧，亦以更亲和的面貌——即作为跟儿女关系亲密的“暖爸”——松动老父的传统父亲形象，以建构三代同堂的感情纽带（而不是传统家庭观念中壁垒分明的辈份观念）。例如在香港文化中，父亲节的主要庆祝活动不是送礼，而是跟父亲“饮茶”。在“一盅两件”（粤式饮茶中一杯茶两笼点心）跟小孩玩闹的画面之间，年轻父亲（即老父的儿子）在社交平台上分享一张“跟爷爷饮荼”的三代同堂照片，就能将“慈父”与“孝子”有机地集于一身，其“暖爸”形象就更加立体了——</p><p>当然，以sharenting为自己塑造“暖爸”形象，并不代表自己真的是“暖爸”。但在父亲节当下，我们反思教养、反思家庭角色的问题时，或者会发觉：时代正缓慢地进步著。</p>
